--- a/lekatech.html
+++ b/lekatech.html
@@ -137,7 +137,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="column" style="flex-direction: row;">
+			<div class="column">
 				<div class="content-field">
 					<h3>Enhanced</h3>
 					<img class="screen" src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
