--- a/lekatech.html
+++ b/lekatech.html
@@ -137,7 +137,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="column">
+			<div class="column" style="flex-direction: row;">
 				<div class="content-field">
 					<h3>Enhanced</h3>
 					<img class="screen" src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
@@ -268,7 +268,7 @@
 				<div class="content-field">
 					<h2>Physical buttons</h2>
 					<p>Physical buttons were part of the device the UI was made for so we decided to use them as "backup" buttons in case user was using gloves and couldn't touch the touchscreen. We put all the navigation links there plus shortcut to three most commonly used modes.<br><br></p>
-					<img src="Liitteet/Lekatech/Physical-buttons.png" alt="Physival buttons" style="max-width: 400px;">
+					<img src="Liitteet/Lekatech/Physical-buttons.png" alt="Physical buttons" style="max-height: 200px;">
 				</div>
 				<div class="content-field" style="width: 50%;">
 					<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
