--- a/lekatech.html
+++ b/lekatech.html
@@ -83,7 +83,7 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field" style="min-height: 50vh;">
+				<div class="content-field" style="min-height: 40vh;">
 				</div>
 			</div>
 		</div>
@@ -184,7 +184,7 @@
 			<div class="column">
 				<div class="content-field" style="width: 50%;">
 					<h3 style="color: var(--lekatech-blue);">Innovative UI</h3>
-					<h2>Opening/operating screen</h2>
+					<h2>Operating screen</h2>
 					<p>Since the most crucial function of the UI was the hammering, we decided the operation screen was to be the first thing you saw when opening the device so you could immediately start to work.</p>
 				</div>
 				<div class="column">
