--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
 	
 <!--BODY-->	
 	
-	<div class="content-field">
+	<div class="content-field first">
 		<h1>About Me</h1>
 		<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a small entrepreneur. Through out years I have become increasingly more interested in functionality of things rather than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
 		<br>
