--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -38,11 +38,9 @@
 <!--BODY-->	
 	
 
-	<div class="content-field">
+	<div class="content-field first">
 		<h1>Graphic design</h1>
 		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
-	</div>
-	<div class="content-field">
 		<h2>Staffroom</h2>
 		<div class="gallery">
 			<a target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif">
@@ -61,8 +59,6 @@
 				<img class="galleryimage" src="Liitteet/Staffroom/Luustonkuntokartoitus-mockup.jpg" alt="Staffroom Form">
 			</a>
 		</div>
-	</div>
-	<div class="content-field">
 		<h2>Citymarket</h2>
 		<div class="gallery">
 			<a href="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg">
@@ -84,8 +80,6 @@
 				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg" alt="Citymarket newspaper ad">
 			</a>
 		</div>
-	</div>
-	<div class="content-field">
 		<h2>Citycon</h2>
 		<div class="gallery">
 			<a target="_blank" href="Liitteet/Citycon/omena_hintapohja.jpg">
@@ -98,8 +92,6 @@
 				<img class="galleryimage" src="Liitteet/Citycon/DUO-Lego-kartta.jpg" alt="Citycon map">
 			</a>
 		</div>
-	</div>
-	<div class="content-field">
 		<h2>Instrumentarium</h2>
 		<div class="gallery">
 			<a href="Liitteet/Instrumentarium/Flyer-mockup.png" target="_blank">
@@ -109,8 +101,6 @@
 				<img class="galleryimage" src="Liitteet/Instrumentarium/Kuponki-mockup.png" alt="Instrumentarium coupons">
 			</a>
 		</div>
-	</div>
-	<div class="content-field">
 		<h2>Others</h2>
 		<div class="gallery">
 			<a target="_blank" href="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg">
