--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 <!--HERO-->	
 	
-	<div class="content-field">
+	<div class="content-field first">
 		<div class="column reversed">
 			<div class="content-field">
 				<h1>Hi, I'm Miro. Welcome to my portfolio!</h1>
