--- a/uxui.html
+++ b/uxui.html
@@ -37,7 +37,7 @@
 	
 <!--BODY-->	
 	
-	<div class="content-field">
+	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="vuorox.html">
