--- a/vuorox.html
+++ b/vuorox.html
@@ -53,7 +53,7 @@
 <!--HERO-->	
 	
 	<div class="hero darkmode">
-		<div class="content-field">
+		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
 					<h1>Vuorox</h1>
@@ -94,7 +94,7 @@
 	
 	
 <!--BODY-->
-	<div  class="content-field fullscreen">
+	<div  class="content-field">
 		<div class="column">
 			<div class="content-field">
 				<h2>Problem</h2>
