--- a/lekatech.html
+++ b/lekatech.html
@@ -53,7 +53,7 @@
 <!--HERO-->	
 	
 	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-size: 50vw; background-position: right 100px;">
-		<div class="content-field">
+		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
 					<h1>Lekatech</h1>
@@ -93,22 +93,26 @@
 	
 <!--BODY-->
 
-	<div class="content-field fullscreen">
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field">
 				<h2>Assignment</h2>
-				<p>Assignment from to the our entire team was to come up with <b>two hammer concepts</b> and <b>two hammer UI concepts.</b> The hammer-team and the UI-team worked mostly separately but with constant check ups and critiques with each other. Names of the finnished hammer concepts were Agitator M3 and GranitE3.<br></p>
+				<p>Assignment for our entire team was to come up with <b>two hammer concepts</b> and <b>two hammer UI concepts.</b> The hammer-team and the UI-team worked mostly separately but with constant check ups and critiques with each other. Names of the finnished hammer concepts were Agitator M3 and GranitE3.</p>
 				<h3>Basic info about the breaker hammers</h3>
-				<p>The remote control of the hammer happens from excavator machine cabin where the <a href="#anchor1">touchscreen-device</a> is located. The hammering starts when user presses a pedal in the cabin with their foot. So there is no "Start hammering" type button in the UI. <b>Note: UI also includes physical buttons.</b></p>
+				<p>Breaker hammers are used in excavators. Earlier the only breaker hammers in the market were hydraulic hammers so electric hammers were a new invention. With both hammers the hammering starts when user presses a pedal with their foot. The difference is that electric hammer can be controlled via <b>touchscreen device (device where we made the UI for)</b> on the excavator so that the impact energy and the frequency of hammering can be changed. This makes hammering throught different kinds of materials easier.</p>
+				<h3>UI Concepts</h3>
+				<p>One UI concept was not specifically linked to one hammer concept but rather we made one "conservative" UI close to customers pre-existing drafts and the other was more futuristic with more liberties in execution. We ended up calling the conservative UI <b>Enhanced</b> and the futuristic one <b>Innovative</b>. When prototyping these concepts, <b>I was responsible for the Innovative UI</b> so I only have deeper dive to that concept in this page.</p>
 			</div>
-			<div class="column" style="flex-direction: row;">
-				<div class="content-field" style="align-items: center;">
-					<h3>Agitator M3</h3>
-					<img src="Liitteet/Lekatech/Agitator.png" alt="Agitator M3" style="max-height: 65vh;">
-				</div>
-				<div class="content-field" style="align-items: center;">
-					<h3>GranitE3</h3>
-					<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
+			<div class="content-field">
+				<div class="column">
+					<div class="content-field" style="align-items: center;">
+						<h3>The hammer (GranitE3 version)</h3>
+						<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
+					</div>
+					<div class="content-field" style="align-items: center;">
+						<h3 style="color: var(--text-light);">The device UI is used</h3>
+						<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -116,61 +120,22 @@
 	<div class="content-field">
 		<div class="column">
 			<div class="content-field">
-				<h2>UI Concepts</h2>
-				<p>One UI concept was not to be specifically linked to one hammer concept but rather we made one "conservative" UI close to customers pre-existing drafts and vision and the other was more futuristic with more liberties in execution. We ended up calling the conservative UI <b>Enhanced</b> and the futuristic one <b>Innovative</b>. When prototyping these concepts, <b>I was responsible for the Innovative UI.</b> This is why I only have deeper dive to the Innovative in this page.</p>
-				<div class="column">
-					<div class="content-field">
-						<h3>Enhanced</h3>
-						<ul>
-							<li>Flow of the UI kept close to customers vision</li>
-							<li>Safe option for acute need</li>
-							<li>Updated visuals</li>
-						</ul>
-					</div>
-					<div class="content-field">
-						<h3>Innovative</h3>
-						<ul>
-							<li>Entire structure and visuals updated</li>
-							<li>Flow of the UI imitating other modern UI:s</li>
-							<li>Extra functions such as user accounts and different rights on different users.</li>
-						</ul>
-					</div>
-				</div>
+				<h2>Process</h2>
+				<p>We started by studying all the key functions of the hammers and the environment UI was used on (excavator cabin). Not much user research was possible since the electric hammers didn’t exist on the market yet and therefore there were no pre-existing users and the project was confidential so we couldn’t share any information about it. We did manage to get some information from construction workers about hammering related things.</p>
+				<h3>Findings</h3>
+				<p style="margin-bottom: 0;">Excavator drivers often wear gloves, sometimes work in dark and the hammering is a pretty straight-forward routine procedure. That meant that the UI needed to...</p>
+				<ul>
+					<li>be visually clear and perceicable by one glance, easy to bring in to use</li>
+					<li>require mimimal clicks and be usable with gloves on</li>
+					<li>have dim colours so light of the screen won't dazzle the user</li>
+				</ul>
+				<h3>Prototyping</h3>
+				<p>The prototyping process was iterative, we made some wireframes first and then showed them to the customer, re-developed the necessary parts and then showed an updated version until the final UI was ready.</p>
 			</div>
-			<div class="column" style="flex-direction: row;">
-				<div class="content-field">
-					<h3>Enhanced</h3>
-					<img class="screen" src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
+			<div class="column">
+				<div class="content-field" style="align-items: center;">
+					<img src="Liitteet/Lekatech/Drafts.jpg" alt="Drafts" style="max-height: 65vh">
 				</div>
-				<div class="content-field">
-					<h3>Innovative</h3>
-					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Innovative">
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Design drivers</h2>
-				<div class="column">
-					<div class="content-field">
-						<h3>Minimal clicks</h3>
-						<p>Easy to use from the excavator cabin.</p>
-					</div>
-					<div class="content-field">
-						<h3>Clarity</h3>
-						<p>Avoiding visual clutter.</p>
-					</div>
-					<div class="content-field">
-						<h3>Affordance</h3>
-						<p>Elements are self-explanatory. Button looks like a button. No deduction required from the user.</p>
-					</div>
-				</div>
-			</div>
-			<div class="content-field" id="anchor1" style="align-items: center;">
-				<h3 style="color: var(--text-light);">The device UI is used</h3>
-				<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
 			</div>
 		</div>
 	</div>
@@ -205,7 +170,6 @@
 				<div class="content-field" style="width: 50%;">
 					<h2>Changing program</h2>
 					<p>Having different programs is the key function separating electric breaker hammer from hydraulic hammer (competitor). Programs help hammering different kind of materials with most efficient hammering frequency and impact energy. <b>Programs are divided into modes and cycles.</b> Modes are programs with only one type of frequency and impact energy, and cycles are combination of many modes.</p>
-					<p style="font-size: 12px">Note! Icons used in the modes are placeholders and were to be replaced in further development of the UI.</p>
 				</div>
 				<div class="column">
 					<div class="content-field">
