--- a/aboutme.html
+++ b/aboutme.html
@@ -52,8 +52,11 @@
 				Usability testing<br>
 				User research<br>
 				Accessibility evalutation<br>
+				Wireframing<br>
+				Prototyping<br>
+				Design systems<br>
 				HTML &amp; CSS<br>
-				Website building &amp; management<br></p>
+				Website maintenance<br></p>
 			</div>
 			<div class="content-field">
 				<h3>Tools</h3>
