--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -40,7 +40,7 @@
 
 	<div class="content-field first">
 		<h1>Graphic design</h1>
-		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.<br><br></p>
 		<h2>Staffroom</h2>
 		<div class="gallery">
 			<a target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif">
