--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div class="content-field" style="align-items: center;">
 				<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh;">
-					<img src="Liitteet/Portfoliokuva.png" alt="Profiilikuva" style="width: 75%;">
+					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="width: 75%;">
 				</div>
 			</div>
 		</div>
