--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="content-field first">
 		<div class="column reversed">
 			<div class="content-field">
-				<h1>Hi, I'm Miro. Welcome to my portfolio!</h1>
+				<h1>Hi, I'm Miro, graphic and UX &amp; UI designer!</h1>
 				<p>I'm Miro, a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as a graphic designer earlier mostly as a freelancer.</p>
 				<h3>View my work</h3>
 				<div class="minisection">
