--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -41,8 +41,12 @@
 	<div class="content-field first">
 		<h1>Graphic design</h1>
 		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.<br><br></p>
-		<h2>Staffroom</h2>
-		<div class="gallery">
+		<div class="column">
+			<div class="content-field" style="width: 40%;">
+				<h2>Staffroom</h2>
+				<p>A customer for whom i've made custom work starting from logo and corporate visual identity to production work such as banners, forms and flyers.</p>
+			</div>
+			<div class="gallery">
 			<a target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif">
 				<img class="galleryimage" src="Liitteet/Staffroom/Logo-mockup.gif" alt="Staffroom Logo">
 			</a>
@@ -58,60 +62,81 @@
 			<a target="_blank" href="Liitteet/Staffroom/Luustonkuntokartoitus-mockup.jpg">
 				<img class="galleryimage" src="Liitteet/Staffroom/Luustonkuntokartoitus-mockup.jpg" alt="Staffroom Form">
 			</a>
+			</div>
 		</div>
-		<h2>Citymarket</h2>
-		<div class="gallery">
-			<a href="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg" alt="Citymarket newspaper ad">
-			</a>
-			<a href="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg" alt="Citymarket newspaper ad">
-			</a>
-			<a href="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg" alt="Citymarket newspaper ad">
-			</a>
-			<a href="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg" alt="Citymarket newspaper ad">
-			</a>
-			<a href="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg" alt="Citymarket newspaper ad">
-			</a>
-			<a href="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg">
-				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg" alt="Citymarket newspaper ad">
-			</a>
+		<div class="column">
+			<div class="content-field" style="width: 40%;">
+				<h2>Citymarket</h2>
+				<p>A short-term customer for whom I've made newspaper and social media commercials as a substitute to their graphic designer on a vacation.</p>
+			</div>
+			<div class="gallery">
+				<a href="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg" alt="Citymarket newspaper ad">
+				</a>
+				<a href="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg" alt="Citymarket newspaper ad">
+				</a>
+				<a href="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg" alt="Citymarket newspaper ad">
+				</a>
+				<a href="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg" alt="Citymarket newspaper ad">
+				</a>
+				<a href="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg" alt="Citymarket newspaper ad">
+				</a>
+				<a href="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg">
+					<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg" alt="Citymarket newspaper ad">
+				</a>
+			</div>
 		</div>
-		<h2>Citycon</h2>
-		<div class="gallery">
-			<a target="_blank" href="Liitteet/Citycon/omena_hintapohja.jpg">
-				<img class="galleryimage" src="Liitteet/Citycon/omena_hintapohja.jpg" alt="Citycon pricecanvas">
-			</a>
-			<a target="_blank" href="Liitteet/Citycon/Rintanappi.jpg">
-				<img class="galleryimage" src="Liitteet/Citycon/Rintanappi.jpg" alt="Citycon nametag">
-			</a>
-			<a target="_blank" href="Liitteet/Citycon/DUO-Lego-kartta.jpg">
-				<img class="galleryimage" src="Liitteet/Citycon/DUO-Lego-kartta.jpg" alt="Citycon map">
-			</a>
+		<div class="column">
+			<div class="content-field" style="width: 40%;">
+				<h2>Citycon</h2>
+				<p>While working on advertising agency, I made different kinds of custom work to Citycon such as shopping mall maps, price canvases and name tags.</p>
+			</div>
+			<div class="gallery">
+				<a target="_blank" href="Liitteet/Citycon/omena_hintapohja.jpg">
+					<img class="galleryimage" src="Liitteet/Citycon/omena_hintapohja.jpg" alt="Citycon pricecanvas">
+				</a>
+				<a target="_blank" href="Liitteet/Citycon/Rintanappi.jpg">
+					<img class="galleryimage" src="Liitteet/Citycon/Rintanappi.jpg" alt="Citycon nametag">
+				</a>
+				<a target="_blank" href="Liitteet/Citycon/DUO-Lego-kartta.jpg">
+					<img class="galleryimage" src="Liitteet/Citycon/DUO-Lego-kartta.jpg" alt="Citycon map">
+				</a>
+			</div>
 		</div>
-		<h2>Instrumentarium</h2>
-		<div class="gallery">
-			<a href="Liitteet/Instrumentarium/Flyer-mockup.png" target="_blank">
-				<img class="galleryimage" src="Liitteet/Instrumentarium/Flyer-mockup.png" alt="Instrumentarium flyer">
-			</a>
-			<a href="Liitteet/Instrumentarium/Kuponki-mockup.png" target="_blank">
-				<img class="galleryimage" src="Liitteet/Instrumentarium/Kuponki-mockup.png" alt="Instrumentarium coupons">
-			</a>
+		<div class="column">
+			<div class="content-field" style="width: 40%;">
+				<h2>Instrumentarium</h2>
+				<p>Another advertising agency customer for whom I mostly made flyers and coupons.</p>
+			</div>
+			<div class="gallery">
+				<a href="Liitteet/Instrumentarium/Flyer-mockup.png" target="_blank">
+					<img class="galleryimage" src="Liitteet/Instrumentarium/Flyer-mockup.png" alt="Instrumentarium flyer">
+				</a>
+				<a href="Liitteet/Instrumentarium/Kuponki-mockup.png" target="_blank">
+					<img class="galleryimage" src="Liitteet/Instrumentarium/Kuponki-mockup.png" alt="Instrumentarium coupons">
+				</a>
+			</div>
 		</div>
-		<h2>Others</h2>
-		<div class="gallery">
-			<a target="_blank" href="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg">
-				<img class="galleryimage" src="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg" alt="Tampere Formula Student logo">
-			</a>
-			<a target="_blank" href="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg">
-				<img class="galleryimage" src="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg" alt="Lastenkirjafestarit logo">
-			</a>
-			<a target="_blank" href="Liitteet/SKA/Mockup.jpg">
-				<img class="galleryimage" src="Liitteet/SKA/Mockup.jpg" alt="SKA flyers">
-			</a>
+		<div class="column">
+			<div class="content-field" style="width: 40%;">
+				<h2>Others</h2>
+				<p>I've made logos and ads to some small businessess, mostly as single orders.</p>
+			</div>
+			<div class="gallery">
+				<a target="_blank" href="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg">
+					<img class="galleryimage" src="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg" alt="Tampere Formula Student logo">
+				</a>
+				<a target="_blank" href="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg">
+					<img class="galleryimage" src="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg" alt="Lastenkirjafestarit logo">
+				</a>
+				<a target="_blank" href="Liitteet/SKA/Mockup.jpg">
+					<img class="galleryimage" src="Liitteet/SKA/Mockup.jpg" alt="SKA flyers">
+				</a>
+			</div>
 		</div>
 	</div>
 	
