--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -44,7 +44,7 @@
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Staffroom</h2>
-				<p>A customer for whom i've made custom work starting from logo and corporate visual identity to production work such as banners, forms and flyers.</p>
+				<p>A customer for whom i've made custom work starting from logo and corporate visual identity to banners, forms and flyers.</p>
 			</div>
 			<div class="gallery">
 			<a target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif">
