--- a/vuorox.html
+++ b/vuorox.html
@@ -110,7 +110,7 @@
 				<ul>
 					<li>Diginatives, usually younger workers with high expectations for apps</li>
 					<li>Workers resistant to change, usually experienced or elderly nurses who are mostly likely to complain in face of any difficulty using the app</li>
-					<li>Non-native finnish speakers who might require more simplistic vocabulary</li>
+					<li>Non-native finnish speakers</li>
 				</ul>
 			</div>
 		</div>
