--- a/lekatech.html
+++ b/lekatech.html
@@ -52,7 +52,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-size: 50vw; background-position: right 100px;">
+	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Hero.png); background-size: 50vw; background-position: right 100px;">
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
@@ -67,10 +67,7 @@
 						</div>
 						<div class="content-field">
 							<h3>My role</h3>
-							<p>'Innovative' UI<br>
-							UX &amp; UI Design<br>
-							Wireframing<br>
-							Prototyping<br></p>
+							<p>Prototyping the 'Innovative' UI and all the design work before it</p>
 						</div>
 						<div class="content-field">
 							<h3>Tools</h3>
