--- a/uxui.html
+++ b/uxui.html
@@ -8,6 +8,19 @@
 	<link rel="icon" type="image/x-icon" href="#"> <!--FAVICON-->
 	<script src="javascript.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
+	<style>
+		
+		.pictureframe{
+			max-width: 65vw;
+			text-align: left;
+		}
+		
+		img{
+			object-position: left;
+			height: 100%;
+		}
+		
+	</style>
 </head>
 	
 	
@@ -40,28 +53,46 @@
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<a class="card" href="vuorox.html">
+			<!-- <a class="card" href="finnishdesigners.html">
 				<div class="content-field">
-					<div class="pictureframe" style="width: 100%; max-width: 65vw; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
+					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
+						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 					</div>
 				</div>
 				<div class="content-field">
-					<h2 style="">Vuorox</h2>
+					<h2>Finnish Designers</h2>
+					<p>Portfolio platform and community for finnish designers.</p>
+					<div class="button">View project</div>
+				</div>
+			</a> -->
+			<a class="card" href="vuorox.html">
+				<div class="content-field">
+					<div class="pictureframe" style="background-color: var(--vuorox-secondary);">
+						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
+					</div>
+				</div>
+				<div class="content-field">
+					<h2>Vuorox</h2>
 					<p>An app where nurses can check their work shifts and manage them.</p>
 					<div class="button">View project</div>
 				</div>
 			</a>
 			<a class="card" href="lekatech.html">
 				<div class="content-field">
-					<div class="pictureframe" style="width: 100%; max-width: 65vw; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
+					<div class="pictureframe" style="background-color: var(--lekatech-background);">
+						<img src="Liitteet/Lekatech/hero.png" alt="Lekatech">
+					</div>
 				</div>
 				<div class="content-field">
-					<h2 style="">Lekatech</h2>
+					<h2>Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
 					<div class="button">View project</div>
 				</div>
 			</a>
 		</div>
+		<!-- <div class="column">
+			<div class="content-field"></div>
+		</div> -->
 	</div>
 	
 	
