--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="content-field" style="align-items: center;">
-				<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh;">
+				<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh; align-items: flex-start;">
 					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="width: 75%;">
 				</div>
 			</div>
