--- a/vuorox.html
+++ b/vuorox.html
@@ -56,8 +56,9 @@
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
-					<h1>Vuorox</h1>
-					<p>Assignment was to come up with an updated concept for Plaincomplex's Vuorox-app, an app where nurses can check up their work shifts and manage them.</p>
+					<h1 style="margin-bottom: 0">Vuorox</h1>
+					<h3 style="margin-bottom: 25px;">Customer: Plaincomplex</h3>
+					<p>Assignment was to come up with an updated concept for Vuorox-app, an app where nurses can check up their work shifts and manage them.</p>
 					<div class="column" style="align-items: flex-start; height: fit-content;">
 						<div class="content-field">
 							<h3>Team</h3>
@@ -67,10 +68,7 @@
 						</div>
 						<div class="content-field">
 							<h3>My role</h3>
-							<p>UX &amp; UI Design<br>
-							User research<br>
-							Wireframing<br>
-							Prototyping<br></p>
+							<p>I was part of every step of the design process</p>
 						</div>
 						<div class="content-field">
 							<h3>Tools</h3>
