--- a/uxui.html
+++ b/uxui.html
@@ -80,7 +80,7 @@
 			<a class="card" href="lekatech.html">
 				<div class="content-field">
 					<div class="pictureframe" style="background-color: var(--lekatech-background);">
-						<img src="Liitteet/Lekatech/hero.png" alt="Lekatech">
+						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 					</div>
 				</div>
 				<div class="content-field">
