--- a/uxui.html
+++ b/uxui.html
@@ -53,18 +53,6 @@
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<!-- <a class="card" href="finnishdesigners.html">
-				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
-						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
-					</div>
-				</div>
-				<div class="content-field">
-					<h2>Finnish Designers</h2>
-					<p>Portfolio platform and community for finnish designers.</p>
-					<div class="button">View project</div>
-				</div>
-			</a> -->
 			<a class="card" href="vuorox.html">
 				<div class="content-field">
 					<div class="pictureframe" style="background-color: var(--vuorox-secondary);">
@@ -77,6 +65,20 @@
 					<div class="button">View project</div>
 				</div>
 			</a>
+			<a class="card" href="finnishdesigners.html">
+				<div class="content-field">
+					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
+						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
+					</div>
+				</div>
+				<div class="content-field">
+					<h2>Finnish Designers</h2>
+					<p>Portfolio platform and community for finnish designers.</p>
+					<div class="button">View project</div>
+				</div>
+			</a>
+		</div>
+		<div class="column">
 			<a class="card" href="lekatech.html">
 				<div class="content-field">
 					<div class="pictureframe" style="background-color: var(--lekatech-background);">
@@ -89,10 +91,8 @@
 					<div class="button">View project</div>
 				</div>
 			</a>
-		</div>
-		<!-- <div class="column">
 			<div class="content-field"></div>
-		</div> -->
+		</div>
 	</div>
 	
 	
