--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -61,7 +61,7 @@
 					<p>Assignment was to come up with an updated concept for Finnish Designers, a finnish portfolio platform and community for designers. I was part of two steps of the process: defining the problem with UX design methods and prototyping the search-engine for the website</p>
 					<div class="column" style="align-items: flex-start; height: fit-content;">
 						<div class="content-field">
-							<h3>UX Team</h3>
+							<h3>Team</h3>
 							<p>Miro Eskelinen<br>
 							Eemil Kalliokoski<br>
 							Vladislav Khannolainen<br>
