--- a/vuorox.html
+++ b/vuorox.html
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="content-field" style="min-height: calc(100vh - 100px);">
+		<div class="content-field">
 			<div class="column">
 				<div class="column">
 					<div class="content-field">
