--- a/uxui.html
+++ b/uxui.html
@@ -12,11 +12,11 @@
 		
 		.pictureframe{
 			max-width: 65vw;
-			text-align: left;
 		}
 		
 		img{
 			object-position: left;
+			object-fit: cover;
 			height: 100%;
 		}
 		
