--- a/vuorox.html
+++ b/vuorox.html
@@ -163,8 +163,8 @@
 				</div>
 				<div class="column">
 					<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
-					<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png">
-					<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png">
+					<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Vuorotoive">
+					<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive">
 					<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
 				</div>
 			</div>
