--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -172,8 +172,12 @@
 				</div>
 			</div>
 			<div class="column" style="justify-content: left;">
-				<img class="screen" src="Liitteet/Finnishdesigners/Kaikki-hakutulokset.png" alt="Search page" style="max-height: 100vh;">
-				<img class="screen" src="Liitteet/Finnishdesigners/Hakutulokset.png" alt="Search results">
+				<div class="content-field">
+					<img class="screen" src="Liitteet/Finnishdesigners/Kaikki-hakutulokset.png" alt="Search page" style="max-height: 100vh;">
+				</div>
+				<div class="content-field">
+					<img class="screen" src="Liitteet/Finnishdesigners/Hakutulokset.png" alt="Search results">
+				</div>
 			</div>
 		</div>
 		<div class="content-field">
