--- a/vuorox.html
+++ b/vuorox.html
@@ -145,12 +145,20 @@
 				</div>
 				<div class="content-field">
 					<div class="column">
-						<img class="screen" src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro">
-						<img class="screen" src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro">
+						<div class="content-field">
+							<img class="screen" src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro">
+						</div>
+						<div class="content-field">
+							<img class="screen" src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro">
+						</div>
 					</div>
 					<div class="column">
-						<img class="screen" src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro">
-						<img class="screen" src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa">
+						<div class="content-field">
+							<img class="screen" src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro">
+						</div>
+						<div class="content-field">
+							<img class="screen" src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -162,10 +170,18 @@
 					<p>The most crucial functions aside from seeing the work shifts were to leave day-specific shift wishes and to manage your general work time wishes.</p>
 				</div>
 				<div class="column">
-					<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
-					<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Vuorotoive">
-					<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive">
-					<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
+					<div class="content-field">
+						<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
+					</div>
+					<div class="content-field">
+						<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Vuorotoive" style="max-height: 55vh">
+					</div>
+					<div class="content-field">
+						<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive" style="max-height: 55vh">
+					</div>
+					<div class="content-field">
+						<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
+					</div>
 				</div>
 			</div>
 		</div>
