--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -141,7 +141,7 @@
 			<div class="column">
 				<div class="content-field">
 					<h3>The website</h3>
-				  <h2>Search engine</h2>
+				  	<h2>Search engine</h2>
 					<p>Three key functions of the search engine are main search bar, location bar and  category bar.</p>
 					<h3>Main search bar</h3>
 					<p>In here anything could be written, but when writing, the bar suggests automatically design fields, since those are the most commonly searched thing. Design fields are predetermined, the users can't create new ones so there won't be for example variants of the same design field with slighty different name. This makes the designers feel more unified and the search more efficient. If nothing is written, the bar suggests lastly searched things. Multiple search words can be added via comma that appears automatically when one search word is selected.</p>
@@ -149,14 +149,15 @@
 					<p>These are multiple choice fields. In location bar there are all the regions in Finland. You can also write in the bar in case you want to put a city in there. In category bar there are following options: designers, students, work samples, exhibitions, open jobs.</p>
 				</div>
 				<div class="content-field" style="gap: 35px 0;">
-					<img src="Liitteet/Finnishdesigners/Hakutoiminnot.png" alt="Search functions">
-					<img src="Liitteet/Finnishdesigners/Hakukentta.png" alt="Search functions">
-					<img src="Liitteet/Finnishdesigners/Hakusana.png" alt="Search functions">
-					<img src="Liitteet/Finnishdesigners/Haku-valmis.png" alt="Search functions">
+					<img src="Liitteet/Finnishdesigners/Hakutoiminnot.png" alt="Search functions"><br><br>
+					<img src="Liitteet/Finnishdesigners/Hakukentta.png" alt="Search functions"><br><br>
+					<img src="Liitteet/Finnishdesigners/Hakusana.png" alt="Search functions"><br><br>
+					<img src="Liitteet/Finnishdesigners/Haku-valmis.png" alt="Search functions"><br><br>
 					<div class="column" style="flex-direction: row;">
 						<div class="content-field">
 							<img src="Liitteet/Finnishdesigners/Sijainti.png" alt="Search functions">
 						</div>
+						<br><br>
 						<div class="content-field">
 							<img src="Liitteet/Finnishdesigners/Kategoria.png" alt="Search functions">
 						</div>
