--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 				</div>
 			</div>
-			<div class="content-field" style="align-items: center;">
-				<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh; align-items: flex-start;">
-					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="width: 75%;">
+			<div class="content-field" style="text-align: -webkit-right;">
+				<div class="pictureframe" style="background-color: var(--primary); align-items: flex-start;">
+					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="height: 110%;">
 				</div>
 			</div>
 		</div>
