--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div class="content-field" style="text-align: -webkit-right;">
 				<div class="pictureframe" style="background-color: var(--primary); align-items: flex-start;">
-					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="height: 110%;">
+					<img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="width: 70%;">
 				</div>
 			</div>
 		</div>
