--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 				</div>
 			</div>
 			<div class="content-field" style="text-align: -webkit-right;">
-				<div class="pictureframe" style="background-color: var(--primary); align-items: flex-start;">
-					<!-- <img src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="width: 70%;"> -->
-				</div>
+					<img class="picture" src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="background-color: var(--primary)">
 			</div>
 		</div>
 	</div>	
