--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="content-field" style="text-align: -webkit-right;">
-					<img class="picture" src="Liitteet/Portfoliokuva-edited.png" alt="Profiilikuva" style="background-color: var(--primary)">
+				<div class="pictureframe" style="background-color: var(--primary); background-image: url(Liitteet/Portfoliokuva-edited.png);"></div>
 			</div>
 		</div>
 	</div>	
