--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -148,7 +148,7 @@
 					<h3>Location and category bars.</h3>
 					<p>These are multiple choice fields. In location bar there are all the regions in Finland. You can also write in the bar in case you want to put a city in there. In category bar there are following options: designers, students, work samples, exhibitions, open jobs.</p>
 				</div>
-				<div class="content-field" style="gap: 35px 0;">
+				<div class="content-field">
 					<img src="Liitteet/Finnishdesigners/Hakutoiminnot.png" alt="Search functions"><br><br>
 					<img src="Liitteet/Finnishdesigners/Hakukentta.png" alt="Search functions"><br><br>
 					<img src="Liitteet/Finnishdesigners/Hakusana.png" alt="Search functions"><br><br>
