--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 				</div>
 			</div>
-			<div class="content-field" style="text-align: -webkit-right;">
-				<div class="pictureframe" style="background-color: var(--primary); background-image: url(Liitteet/Portfoliokuva-edited.png);"></div>
+			<div class="content-field" style="align-items: flex-end;">
+				<div class="pictureframe" style="background-color: var(--primary); width: 400px;">
+					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliokuva">
+				</div>
 			</div>
 		</div>
 	</div>	
