--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 				</div>
 			</div>
-			<div class="content-field" style="align-items: flex-end;">
+			<div class="content-field" style="align-items: center;">
 				<div class="pictureframe" style="background-color: var(--primary); width: 350px; height: 350px;">
 					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliokuva">
 				</div>
