--- a/uxui.html
+++ b/uxui.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
 	<style>
 		
-		img{
+		img {
 			object-position: left;
 			object-fit: cover;
 			height: 100%;
@@ -49,8 +49,8 @@
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<a class="card" href="vuorox.html">
-				<div class="content-field">
+			<a class="card" href="vuorox.html" >
+				<div class="content-field" style="width: fit-content;">
 					<div class="pictureframe" style="background-color: var(--vuorox-secondary);">
 						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
 					</div>
@@ -62,7 +62,7 @@
 				</div>
 			</a>
 			<a class="card" href="finnishdesigners.html">
-				<div class="content-field">
+				<div class="content-field" style="width: fit-content;">
 					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
 						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 					</div>
@@ -76,7 +76,7 @@
 		</div>
 		<div class="column">
 			<a class="card" href="lekatech.html">
-				<div class="content-field">
+				<div class="content-field" style="width: fit-content;">
 					<div class="pictureframe" style="background-color: var(--lekatech-background);">
 						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 					</div>
