--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="content-field" style="align-items: center;">
-				<div class="pictureframe" style="background-color: var(--primary); width: 350px; height: 350px;">
+				<div class="pictureframe" style="background-color: var(--primary); max-width: 75%">
 					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliokuva">
 				</div>
 			</div>
