--- a/lekatech.html
+++ b/lekatech.html
@@ -52,7 +52,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Hero.png); background-size: 50vw; background-position: right 100px;">
+	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Hero.png); background-size: 45%; background-position: right 100px;">
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
