--- a/lekatech.html
+++ b/lekatech.html
@@ -52,7 +52,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Hero.png); background-size: 45%; background-position: right 100px;">
+	<div class="hero darkmode">
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
@@ -80,7 +80,8 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field" style="min-height: 40vh;">
+				<div class="content-field">
+					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Lekatech">
 				</div>
 			</div>
 		</div>
