--- a/aboutme.html
+++ b/aboutme.html
@@ -38,43 +38,52 @@
 <!--BODY-->	
 	
 	<div class="content-field first">
-		<h1>About Me</h1>
-		<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a small entrepreneur. Through out years I have become increasingly more interested in functionality of things rather than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
-		<br>
-		In 2021 I began to study UX &amp; UI in Design Institute of LAB University of Applied Sciences. I aim to move into that field of work more in the future although so far I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having working history in customer service and sales jobs helps me with communication and pitching ideas with customers and team members alike. I also have interest towards game design, screenwriting and storytelling. I often do illustrations as a hobby.</p>
-		<h2>Skills</h2>
-		<div class="column" style="max-width: 600px;">
-			<div class="content-field">
-				<h3>Essentials</h3>
-				<p>UI Design<br>
-				UX Design<br>
-				Graphic Design<br>
-				Usability testing<br>
-				User research<br>
-				Accessibility evalutation<br>
-				Wireframing<br>
-				Prototyping<br>
-				Design systems<br>
-				HTML &amp; CSS<br>
-				Website maintenance<br></p>
+		<div class="column">
+			<div class="content-field" style="width: 300px;">
+				<div class="pictureframe" style="background-color: var(--primary); margin-top: 30px;">
+					<img src="Liitteet/Aboutmekuva-edited.png" alt="Picture of me">
+				</div>
 			</div>
 			<div class="content-field">
-				<h3>Tools</h3>
-				<p>Figma<br>
-				Adobe Indesign<br>
-				Adobe Illustrator<br>
-				Adobe Photoshop<br>
-				Adobe XD<br>
-				Wordpress<br>
-				Office 365<br></p>
-			</div>
-			<div class="content-field">
-				<h3>Other</h3>
-				<p>Illustration<br>
-				Game Design<br>
-				3D Modeling<br>
-				Sales<br>
-				Customer service</p>
+				<h1>About Me</h1>
+				<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a small entrepreneur. Through out years I have become increasingly more interested in functionality of things rather than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
+				<br>
+				In 2021 I began to study UX &amp; UI in Design Institute of LAB University of Applied Sciences. I aim to move into that field of work more in the future although so far I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having working history in customer service and sales jobs helps me with communication and pitching ideas with customers and team members alike. I also have interest towards game design, screenwriting and storytelling. I often do illustrations as a hobby.</p>
+				<h2>Skills</h2>
+				<div class="column" style="max-width: 600px;">
+					<div class="content-field">
+						<h3>Essentials</h3>
+						<p>UI Design<br>
+						UX Design<br>
+						Graphic Design<br>
+						Usability testing<br>
+						User research<br>
+						Accessibility evalutation<br>
+						Wireframing<br>
+						Prototyping<br>
+						Design systems<br>
+						HTML &amp; CSS<br>
+						Website maintenance<br></p>
+					</div>
+					<div class="content-field">
+						<h3>Tools</h3>
+						<p>Figma<br>
+						Adobe Indesign<br>
+						Adobe Illustrator<br>
+						Adobe Photoshop<br>
+						Adobe XD<br>
+						Wordpress<br>
+						Office 365<br></p>
+					</div>
+					<div class="content-field">
+						<h3>Other</h3>
+						<p>Illustration<br>
+						Game Design<br>
+						3D Modeling<br>
+						Sales<br>
+						Customer service</p>
+					</div>
+				</div>
 			</div>
 		</div>
     </div>
