--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div class="content-field" style="align-items: center;">
 				<div class="pictureframe" style="background-color: var(--primary); width: 85%">
-					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliokuva">
+					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliopicture">
 				</div>
 			</div>
 		</div>
