--- a/lekatech.html
+++ b/lekatech.html
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 					<br>
-					<div class="minisection">
+					<div class="buttonsection">
 						<a class="button" href="#anchor2">View screens</a>
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
