--- a/vuorox.html
+++ b/vuorox.html
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 					<br>
-					<div class="minisection">
+					<div class="buttonsection">
 						<a class="button" href="#anchor">View screens</a>
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
