--- a/lekatech.html
+++ b/lekatech.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 				<div class="content-field">
-					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Lekatech">
+					<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 				</div>
 			</div>
 		</div>
