--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -40,7 +40,9 @@
 
 	<div class="content-field first">
 		<h1>Graphic design</h1>
-		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.<br><br></p>
+		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+	</div>
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Staffroom</h2>
@@ -64,6 +66,8 @@
 			</a>
 			</div>
 		</div>
+	</div>
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Citymarket</h2>
@@ -90,6 +94,8 @@
 				</a>
 			</div>
 		</div>
+	</div>
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Citycon</h2>
@@ -107,6 +113,8 @@
 				</a>
 			</div>
 		</div>
+	</div>
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Instrumentarium</h2>
@@ -121,6 +129,8 @@
 				</a>
 			</div>
 		</div>
+	</div>
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field" style="width: 40%;">
 				<h2>Others</h2>
