--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	
 <!--HERO-->	
 	
-	<div class="content-field first">
+	<div class="content-field first" style="min-height: calc(100vh - 125px);">
 		<div class="column reversed">
 			<div class="content-field">
-				<h1>Hi, I'm Miro, graphic and UX &amp; UI designer!</h1>
-				<p>I'm Miro, a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as a graphic designer earlier mostly as a freelancer.</p>
+				<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
+				<p>I'm a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as graphic designer earlier.</p>
 				<div class="buttonsection">
 					<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
