--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="column reversed">
 			<div class="content-field">
 				<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
-				<p>I'm a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as graphic designer earlier.</p>
+				<p>I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti. I have also studied and worked as graphic designer earlier.</p>
 				<div class="buttonsection">
 					<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
