--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 		<div class="column reversed">
 			<div class="content-field">
 				<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
-				<p>I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti. I have also studied and worked as graphic designer earlier.</p>
+				<p>Welcome to my portfolio! I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti, who has also studied and worked as graphic designer.</p>
 				<div class="buttonsection">
 					<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 				</div>
 			</div>
 			<div class="content-field" style="align-items: center;">
-				<div class="pictureframe" style="background-color: var(--primary); width: 75%">
+				<div class="pictureframe" style="background-color: var(--primary); width: 75%;)">
 					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliopicture">
 				</div>
 			</div>
