--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 	<div class="content-field first" style="min-height: calc(100vh - 125px);">
 		<div class="column reversed">
-			<div class="content-field">
+			<div class="content-field" style="margin-top: 40px;">
 				<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
 				<p>Welcome to my portfolio! I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti, who has also studied and worked as graphic designer.</p>
 				<div class="buttonsection">
@@ -48,9 +48,7 @@
 				</div>
 			</div>
 			<div class="content-field" style="align-items: center;">
-				<div class="pictureframe" style="background-color: var(--primary); width: 75%;)">
-					<img src="Liitteet/Portfoliokuva-edited.png" alt="Portfoliopicture">
-				</div>
+				<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%;">
 			</div>
 		</div>
 	</div>	
