--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 				</div>
 			</div>
-			<div class="content-field" style="align-items: center;">
-				<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%;">
+			<div class="content-field" style="align-items: flex-end;">
+				<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px;">
 			</div>
 		</div>
 	</div>	
